crates/plotnik-tests/tests/02-parser/recovery_unclosed/unclosed_node_in_alternation.txt
Q = [(a) (b
------------------ DIAGNOSTICS -------------------
error: missing closing `)`
 --> query.ptk:1:10
  |
1 | Q = [(a) (b
  |          -^
  |          |
  |          node started here
  |
help: add `)` to close the node
